// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions conversionUpdate 1`] = `
Object {
  "type": "conversion",
  "value": Array [
    "test",
  ],
}
`;

exports[`actions fetchConversion 1`] = `
Array [
  Object {
    "type": "conversion",
    "value": Array [
      "test",
    ],
  },
]
`;

exports[`actions fetchHourly 1`] = `
Array [
  Object {
    "type": "dynamoHourly",
    "value": Object {
      "bitfinex": Object {
        "test": "test",
      },
      "gdax": Object {
        "test": "test",
      },
      "gemini": Object {
        "test": "test",
      },
      "kraken": Object {
        "test": "test",
      },
    },
  },
]
`;

exports[`actions fetchMinutely 1`] = `
Array [
  Object {
    "type": "dynamoMinutely",
    "value": Object {
      "bitfinex": Object {
        "test": "test",
      },
      "gdax": Object {
        "test": "test",
      },
      "gemini": Object {
        "test": "test",
      },
      "kraken": Object {
        "test": "test",
      },
    },
  },
]
`;

exports[`actions fetchPrice 1`] = `
Array [
  Object {
    "type": "dynamoPrice",
    "value": Array [
      "test",
    ],
  },
]
`;

exports[`actions fetchTotalSupply 1`] = `
Array [
  Object {
    "type": "totalSupply",
    "value": Array [
      "test",
    ],
  },
]
`;

exports[`actions hourlyUpdate 1`] = `
Object {
  "type": "dynamoHourly",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions minutelyUpdate 1`] = `
Object {
  "type": "dynamoMinutely",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions priceUpdate 1`] = `
Object {
  "type": "dynamoPrice",
  "value": Array [
    "test",
  ],
}
`;

exports[`actions scanStatus 1`] = `
Array [
  Object {
    "type": "dynamoStatus",
    "value": Object {
      "test": "test",
    },
  },
]
`;

exports[`actions statusUpdate 1`] = `
Object {
  "type": "dynamoStatus",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions totalSupplyUpdate 1`] = `
Object {
  "type": "totalSupply",
  "value": Array [
    "test",
  ],
}
`;
